test/parse-error/test.mjs
import { test, getTestName, execPlaywrightTestWithError } from '../helpers.mjs';

test(getTestName(import.meta), (t) =>
  execPlaywrightTestWithError(t.name, `Parse error in "sample.feature" (1:1)`),
);
